# Dinossauro

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.c
